35/lab-35-A-helloContainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-container-internal-service
spec:
  selector:
    app: helloContainer
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 8080
