35/lab-35-A-page-404-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: page-404-internal-service
spec:
  selector:
    app: page-404
  ports:
    - protocol: TCP
      port: 6666
      targetPort: 80
