35/lab-35-default-http-backend-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    app: page-404
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
