35/lab-35-A-ingress-with-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: page-404-internal-service
      port:
        number: 6666
  rules:
  - host: www.hellocontainer.com
    http:
      paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: hello-container-internal-service
              port: 
                number: 4000
  - host: www.mongoexpress.com
    http:
      paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: mongo-express-internal-service
              port:
                number: 5000
