35/lab-35-B-ingress-with-tls-initial.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 80
    host: <Poner aquí el nombre dns del ingress>
  tls:
    - hosts:
      - <Poner aquí el nombre dns del ingress>
      secretName: frontend-tls
