35/lab-35-helloContainer-ingress.yaml
apiVersion: v1
kind: Ingress
metadata: hello-container-ingress
spec:
  rules:
  - host: midominio.com
    http:
      paths:
        - path: /hellocontainer
          backend:
            serviceName: hello-container-internal-service
            servicePort: 4000
        - path: /mongoexpress
          backend:
            serviceName: mongo-express-internal-service
            servicePort: 5000
